---------------------------------------------------------------------------------------------------
Version: 0.5.8
Date: 24.01.2024
  Features:
    - added steam miner to steam power tech
    - added bio rocket fuel recipe
  Bugfixes:
    - fixed bug with dangerOres
    - fixed that some recipes were set one machines but disabled
    - fixed bug that gia pump was placeable on nauvis
---------------------------------------------------------------------------------------------------
Version: 0.5.7
Date: 16.01.2024
  Features:
    - added stone excavator
  Changes:
    - decreased cost of EU circuit
  Bugfixes:
    - removed K2 opt dependance
    - fixed some typos
    - fixed metalworks 4 texture size
---------------------------------------------------------------------------------------------------
Version: 0.5.6
Date: 16.01.2024
  Changes:
    - decreased cost of EU circuit
  Bugfixes:
    - fixed reflux plating craftable, added prebaked reflux plating
---------------------------------------------------------------------------------------------------
Version: 0.5.5
Date: 14.01.2024
  Features:
    - added new 2x2 metalworks that can process ingots
  Changes:
    - buffed alien seed output
    - alien resin returns 6 resin per cycle
    - alien seed and resin cycles are faster
  Bugfixes:
    - included fix for missing dummy in drone script
    - fixed a bug then the gate would tp cloned items when in low power state and operated manualy
---------------------------------------------------------------------------------------------------
Version: 0.5.4
Date: 08.01.2024
  Bugfixes:
    - fixed that teleporters cant be placed on gaia
---------------------------------------------------------------------------------------------------
Version: 0.5.3
Date: 08.01.2024
  Bugfixes:
    - fixed crash when spawning artifact
---------------------------------------------------------------------------------------------------
Version: 0.5.2
Date: 08.01.2024
  Features: