@@ -8,6 +8,8 @@ Date: 24.01.2024
     - fixed bug with dangerOres
     - fixed that some recipes were set one machines but disabled
     - fixed bug that gia pump was placeable on nauvis
+    - fixed rocket silo having bad state if placed by factory planner
+    - fixed crash in multiplayer with non player forces
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.7
 Date: 16.01.2024
